--- a/src/main/webapp/frontend/reviews-list.html
+++ b/src/main/webapp/frontend/reviews-list.html
@@ -264,7 +264,7 @@
                         </div>
                         <div class="review__details">
                             <h4 class="review__name">[[item.name]]</h4>
-                            <p class="review__category" style$="--category: [[item.categoryId]];">[[item.categoryName]]</p>
+                            <p class="review__category" style$="--category: [[item.category]];">[[item.categoryName]]</p>
                         </div>
                         <div class="review__date">
                             <h5>Last tasted</h5>
