Fixed theming of ReviewsList

--- a/src/main/webapp/frontend/styles/shared-styles.html
+++ b/src/main/webapp/frontend/styles/shared-styles.html
@@ -278,6 +278,12 @@
             margin: 0 0 0 auto;
             width: 5em;
         }
+        .reviews {
+            background-color: transparent;
+        }
+        .reviews vaadin-grid-cell-content {
+            background-color: var(--lumo-contrast-5pct);
+        }
         .reviews__no-matches {
             display: flex;
             align-items: center;
